--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eat Healthy Stay Healthy</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
+      
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <section class="first-section">
+    <div class="welcome-area">
+      <div class="welcome-message">
+        <h1><span class="colord-part">Skip</span> The Diet,</h1> 
+        <h1>Just Eat Healthy </h1>
+        <h1>With Food Network</h1>
+        <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+        <a class="link-button" target="_blank" href="https://www.foodpanda.com.bd/"> Order Food</a>
+      </div>
+      <div class="welcome-img">
+        <img src="images/eating-food.png" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 </html>
