--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Eat Healthy Stay Healthy</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
       
   <link rel="stylesheet" href="style.css">
 </head>
@@ -26,5 +26,61 @@
       </div>
     </div>
   </section>
+  <section class="second-section">
+    <div class="about-me">
+      <div class="img-area">
+        <img src="images/Person-Image.png" alt="">
+      </div>
+      <div class="info-area">
+        <h1>About Me</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+          elit. Condimentum diam orci pretium a pharetra, 
+          feugiat cursus. Dictumst risus, sem egestas odio cras 
+          adipiscing vulputate. Nisi, risus in suscipit non. Non 
+          commodo volutpat, pharetra, vel.</p>
+        <a class="link-button" target="_blank" href="https://web.facebook.com/?_rdc=1&_rdr">Contact Me</a>
+      </div>
+    </div>
+  </section>
+  <section class="last-section">
+    <h2>My Recipes</h2>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 
+      1500s</p>
+    <div class="recipe-area">
+      <div id="rec-sec1" class="rec">
+        <img class="healthy-food" src="images/healthy-lunch.jpg" alt="">
+        <h2>Recipie Title</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and 
+          typesetting industry. Lorem Ipsum has been the industry's 
+          standard dummy text ever since the 1500s.</p>
+      </div>
+      <div id="rec-sec2" class="rec">
+        <img class="healthy-food" src="images/healthy-lunch.jpg" alt="">
+        <h2>Recipie Title</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and 
+          typesetting industry. Lorem Ipsum has been the industry's 
+          standard dummy text ever since the 1500s.</p>
+      </div>
+    </div>
+    <div class="social-media">
+      <div class="followers">
+        <h1>700k</h1>
+        <p>Youtube Subscribers</p>
+      </div>
+      <div class="followers">
+        <h1>2.4m</h1>
+        <p>Instagram Followers</p>
+      </div>
+      <div class="followers">
+        <h1>100k</h1>
+        <p>Dribbble Shot Likes</p>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <h2>Eat Fresh</h2>
+    <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+  </footer>
 </body>
 </html>
