--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
   </section>
   <section class="last-section">
-    <h2>My Recipes</h2>
+    <div class="bgc-color">
+      <h2>My Recipes</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
       Lorem Ipsum has been the industry's standard dummy text ever since the 
       1500s</p>
@@ -77,9 +78,10 @@
         <p>Dribbble Shot Likes</p>
       </div>
     </div>
+    </div>
   </section>
   <footer>
-    <h2>Eat Fresh</h2>
+    <h2><span class="footer-colord-part">Eat</span> Fresh</h2>
     <p>Eat healthy to live healthy. Live healthy to live happy.</p>
   </footer>
 </body>
